<resources>
    <string name="app_name">The Book Bank</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="Membership">Membership</string>
    <string name="CreditCard">CreditCard</string>
    <string name="CashOnDelivery">CashOnDelivery</string>
    <string name="ThankYou">Thank You!</string>
    <string name="Message">Your order has been completed successfully</string>
    <string name="button">CONTINUE</string>
    <string name="verifi">Verification code has been send to the +94 767459508</string>
    <string name="button2">Enter OderID</string>
    <string name="button3">Enter MemberID</string>
    <string name="button4">confirm</string>
    <string name="PaymentHandling">Payment Handling</string>
    <string name="EnterID">Enter ID</string>
    <string name="enterid">EnterID</string>
    <string name="button5">OK</string>
    <string name="ID">M0001</string>
    <string name="no">+94 767459508</string>
    <string name="e_mail">tharu@gmail.com</string>
    <string name="button6">Update</string>
    <string name="button7">Delete</string>
    <string name="status">Payment Status</string>
    <string name="mss">Pending</string>
    <string name="CardDetails">Card Details</string>
    <string name="CardNo">CardNo</string>
    <string name="ExpDate">ExpDate</string>
    <string name="Code">Code/CCV</string>
    <string name="Amount">Amount</string>
    <string name="button8">Pay now</string>
    <string name="cardno" />
    <string name="cdno">CardNo</string>
    <string name="expdate">ExpDate</string>
    <string name="code">Code/CCV</string>
    <string name="amount">Amount</string>

    <string name="eid">Enter MemberID</string>
    <string name="Mid">MemberID</string>
    <string name="button9">Confirm</string>
    <string name="enterOderID">Enter OderID</string>
    <string name="oderid">OderID</string>
    <string name="button10">Confirm</string>
    <string name="text1">Enter 6 digit code</string>
    <string name="text3">Code</string>
    <string name="PaymentDetails">Payment Details</string>
    <string name="MemberID">MemberID</string>
    <string name="CONTACTNO">ContactNo</string>
    <string name="Email">Email</string>
    <string name="amountt">Amount</string>
    <string name="memberID">MemberID</string>
    <string name="contactno">ContactNo</string>
    <string name="E_mail">Email</string>
    <string name="Amountt">Amount</string>
    <string name="Pay">Pay</string>
    <string name="Midd">Enter MemberID</string>
    <string name="IDID">EnterID</string>
    <string name="con1">contactno</string>
    <string name="ema">Email</string>
    <string name="amou">Amount</string>
    <string name="am">Amount</string>
    <string name="textView2">Amount</string>
    <string name="feedback">Feedback</string>
    <string name="feed">feedback</string>
    <string name="name">Name</string>
    <string name="textView3">Name</string>
    <string name="textView4">Feedback</string>
    <string name="about">About Us</string>
    <string name="para">para</string>
    <string name="name1">MemberID</string>
    <string name="name2">Name</string>
</resources>